survey-salesforce/salesforce-app/src/objects/ScoreValue__c.object
<CustomObject>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Score Values</relationshipLabel>
        <relationshipName>Score_Values</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScoringGroup__c</fullName>
        <label>Scoring Group</label>
        <referenceTo>ScoringGroup__c</referenceTo>
        <relationshipLabel>Score Values</relationshipLabel>
        <relationshipName>Score_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Score Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Score Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>